--- a/src/Makefile
+++ b/src/Makefile
@@ -4,8 +4,9 @@ LDFLAGS =  -lcuda -lcudart -lcufft -lcublas
 CXXFLAGS = -std=c++11 -fpermissive -fPIC -shared
 NVCCFLAGS = -ccbin g++ -m64 \
 	-gencode arch=compute_60,code=sm_60 \
-    -Xcompiler -fPIC -shared -Wno-deprecated-gpu-targets \
-    -ftz=false -prec-div=true -prec-sqrt=true
+	-gencode arch=compute_35,code=sm_35 \
+-Xcompiler -fPIC -shared -Wno-deprecated-gpu-targets \
+    -ftz=false -prec-div=true -prec-sqrt=true --ptxas-options=-v
 
 CXX=g++
 NVCC=nvcc
