--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@ PROJECT = CUAMPCOR
 LDFLAGS =  -lcuda -lcudart -lcufft -lcublas
 CXXFLAGS = -std=c++11 -fpermissive -fPIC -shared
 NVCCFLAGS = -ccbin g++ -m64 \
+    -gencode arch=compute_35,code=sm_35 \
 	-gencode arch=compute_60,code=sm_60 \
     -Xcompiler -fPIC -shared -Wno-deprecated-gpu-targets \
 	-ftz=false -prec-div=true -prec-sqrt=true
@@ -45,8 +46,8 @@ cuOffset.o: cuOffset.cu $(DEPS)
 cuCorrNormalization.o: cuCorrNormalization.cu $(DEPS)
 	$(NVCC) $(NVCCFLAGS) -c -o $@ cuCorrNormalization.cu
 
-cuAmpcorParameter.o: cuAmpcorParameter.cu 
-	$(NVCC) $(NVCCFLAGS) -c -o $@ cuAmpcorParameter.cu 
+cuAmpcorParameter.o: cuAmpcorParameter.cu
+	$(NVCC) $(NVCCFLAGS) -c -o $@ cuAmpcorParameter.cu
 
 cuCorrTimeDomain.o: cuCorrTimeDomain.cu $(DEPS)
 	$(NVCC) $(NVCCFLAGS) -c -o $@ cuCorrTimeDomain.cu
@@ -54,8 +55,8 @@ cuCorrTimeDomain.o: cuCorrTimeDomain.cu $(DEPS)
 cuCorrFrequency.o: cuCorrFrequency.cu $(DEPS) cuCorrFrequency.h
 	$(NVCC) $(NVCCFLAGS) -c -o $@ cuCorrFrequency.cu
 
-cuAmpcorChunk.o: cuAmpcorChunk.cu cuAmpcorUtil.h $(DEPS) 
-	$(NVCC) $(NVCCFLAGS) -c -o $@ cuAmpcorChunk.cu	
+cuAmpcorChunk.o: cuAmpcorChunk.cu cuAmpcorUtil.h $(DEPS)
+	$(NVCC) $(NVCCFLAGS) -c -o $@ cuAmpcorChunk.cu
 
 cuAmpcorController.o: cuAmpcorController.cu
 	$(NVCC) $(NVCCFLAGS) -c -o $@ cuAmpcorController.cu
@@ -67,11 +68,7 @@ cuEstimateStats.o: cuEstimateStats.cu
 pyampcor: $(OBJS)
 	rm -f PyCuAmpcor.cpp && python3 setup.py build_ext --inplace
 
-#main.o: main.cu
-#	$(NVCC) $(NVCCFLAGS) -c -o $@ main.cu
-
-#ctest: main.o $(OBJS)
 #	$(NVCC) $(LDFLAGS) -o $@ main.o $(OBJS)
 
 clean:
-	rm -rf *.o *so build *~  PyCuAmpcor.cpp ctest *.dat 
+	rm -rf *.o *so build *~  PyCuAmpcor.cpp ctest *.dat
