--- a/src/SConscript
+++ b/src/SConscript
@@ -1,5 +1,6 @@
 #!/usr/bin/env python
 import sys
+import subprocess
 
 Import('envPyCuAmpcor')
 package = envPyCuAmpcor['PACKAGE']
@@ -15,6 +16,10 @@ listFiles = ['GDALImage.cu', 'cuArrays.cu', 'cuArraysCopy.cu',
              'cuAmpcorChunk.cu', 'cuEstimateStats.cu']
 
 lib = envPyCuAmpcor.SharedLibrary(target = 'PyCuAmpcor', source= listFiles, SHLIBPREFIX='')
+
+# add gdal include path
+gdal_cflags = subprocess.check_output('gdal-config --cflags', shell=True)[:-1].decode('utf-8')
+envPyCuAmpcor.Append(ENABLESHAREDNVCCFLAG = ' -DNDEBUG ' + gdal_cflags)
 
 envPyCuAmpcor.Install(build,lib)
 envPyCuAmpcor.Alias('install', build)
