PyCuAmpcor: convert cython to pybind11 bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Early exit if prereqs not available
 if(NOT TARGET GDAL::GDAL
-OR NOT TARGET Python::NumPy
 OR NOT TARGET CUDA::cufft
+OR NOT pybind11_FOUND
    )
     return()
 endif()
@@ -9,8 +9,8 @@ endif()
 set(CMAKE_CUDA_STANDARD 11)
 set(CMAKE_CUDA_STANDARD_REQUIRED TRUE)
 
-cython_add_module(PyCuAmpcor
-    src/PyCuAmpcor.pyx
+pybind11_add_module(PyCuAmpcor
+    src/PyCuAmpcor.cpp
     src/GDALImage.cu
     src/SConscript
     src/cuAmpcorChunk.cu
@@ -34,7 +34,6 @@ target_include_directories(PyCuAmpcor PRIVATE
 target_link_libraries(PyCuAmpcor PRIVATE
     CUDA::cufft
     GDAL::GDAL
-    Python::NumPy
     )
 
 InstallSameDir(
